@@ -5,12 +5,7 @@ import jakarta.inject.Provider;
 
 import java.lang.reflect.Constructor;
 import java.lang.reflect.InvocationTargetException;
-import java.util.Arrays;
-import java.util.HashMap;
-import java.util.List;
-import java.util.Map;
-
-import static java.util.stream.Collectors.toList;
+import java.util.*;
 
 public class Context {
 
@@ -23,22 +18,45 @@ public class Context {
     public <Type, Implementation extends Type>
     void bind(Class<Type> type, Class<Implementation> implementation) {
         Constructor<Implementation> injectionConstructor = getInjectConstructor(implementation);
-        providers.put(type, () -> {
+        providers.put(type, new ConstructorInjectionProvider<>(type, injectionConstructor));
+    }
+
+    public <Type> Optional<Type> get(Class<Type> type) {
+        return (Optional<Type>) Optional.ofNullable(providers.get(type)).map(Provider::get);
+    }
+
+    class ConstructorInjectionProvider<T> implements Provider<T> {
+        private final Class<?> component;
+        private final Constructor<T> injectionConstructor;
+        private volatile boolean constructing;
+
+        ConstructorInjectionProvider(Class<?> component, Constructor<T> injectionConstructor) {
+            this.component = component;
+            this.injectionConstructor = injectionConstructor;
+            constructing = false;
+        }
+
+        @Override
+        public T get() {
+            if (constructing) throw new CircularDependencyException(component);
             try {
+                constructing = true;
                 Object[] dependencies = Arrays.stream(injectionConstructor.getParameters())
-                        .map(p -> get(p.getType()))
+                        .map(p -> Context.this.get(p.getType())
+                                .orElseThrow(() -> new DependencyNotFoundException(p.getType(), component)))
                         .toArray(Object[]::new);
                 return injectionConstructor.newInstance(dependencies);
+            }catch (CircularDependencyException e) {
+                throw new CircularDependencyException(component, e);
             } catch (InstantiationException | IllegalAccessException | InvocationTargetException e) {
                 throw new RuntimeException(e);
             }
-        });
+        }
     }
 
     private <Type> Constructor<Type> getInjectConstructor(Class<Type> implementation) {
         List<Constructor<?>> constructors = Arrays.stream(implementation.getConstructors())
-                .filter(c -> c.isAnnotationPresent(Inject.class))
-                .collect(toList());
+                .filter(c -> c.isAnnotationPresent(Inject.class)).toList();
 
         if (constructors.size() > 1) throw new IllegalComponentException();
 
@@ -52,9 +70,4 @@ public class Context {
                     }
                 });
     }
-
-    public <Type> Type get(Class<Type> type) {
-        return (Type) providers.get(type).get();
-    }
-
 }
